# smart-shell

./: README.md  TEST.md  pyproject.toml
smart_shell/: __init__.py  __main__.py  cli.py  llm.py  server_config.py  utils.py
tests/: test_main.py
