[tool.poetry]
name = "smart-shell"
version = "0.1.0"
description = "AI-powered shell assistant"
authors = ["Giovanni Gatti <giovanni.gatti01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.12.3"
rich = "^13.7.1"
requests = "^2.32.3"
tenacity = "^9.0.0"
pyperclip = "^1.9.0"
pytest = "^8.3.2"

[tool.poetry.scripts]
smart-shell = "smart_shell.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
